# OS-MULTITHREADED-WS

./: .gitignore  CMakeLists.txt  README.md
webserv-singlethreaded/: client  client.c  output.cgi  request.c  segel.c  server  server.c
webserver-files/: Makefile  connection.c  connection.h  home.html  request.c  request.h  segel.c  segel.h  server.c
